dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel
  namespace: prod

  labels:
    app.kubernetes.io/name: laravel
spec:
  rules:
    - host: laravel2.meetup.bigbrain.engineer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 80
    - host: laravel-new.meetup.bigbrain.engineer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 80
